part4/log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: appnamespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
      - name: log-output
        image: macrichard/log-output:4.1
        ports:
        - containerPort: 5000
        readinessProbe:
            httpGet:
              path: /pingpong/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
        volumeMounts:
          - name: config-volume
            mountPath: /config
      volumes:
      - name: config-volume
        configMap:
          name: log-output-config
