part4/log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress
  namespace: appnamespace
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 5000
      - path: /count
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 5000
